<resources>
    <string name="app_name">Uncovering History</string>
    <string name="map_name">Map</string>
    <string name="route_name">Route</string>
    <string name="favourites_name">Favourites</string>
    <string name="profile_name">Profile</string>

    <string name="google_maps_key">AIzaSyCYUkVd46jDLq4pk6E6KDeiSYfFgMMlne4</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_app_id">949336838939681</string>
    <string name="fb_login_protocol_scheme">fb949336838939681</string>
    <string name="title_activity_new_site_form">NewSiteForm</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->

    <!-- Twitter consumer key and secret -->
    <!--    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>-->
    <!--    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>-->

    <string name="historical_site_name">Historical Site Name</string>
    <string name="historical_site_description">Historical Site Description</string>
    <string name="historical_site_location">Historical Site Location</string>

    <string name="site_profile_picture">Site Profile Picture</string>
    <string name="upload_site">Upload Site!</string>
    <string name="site_image">Site Image</string>
    <string name="select_image">Select Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="select_historical_type">Select Historical Type</string>
    <string name="selected_marker_button">View Selected Site</string>
    <string name="site_image_des">Site Image</string>
    <string name="create_historical_route">View Route</string>
    <string name="clear_historical_route">Clear Route</string>
    <string name="start_route">Start Route!</string>

    <string name="user_profile_image">User Profile Image</string>
    <string name="about">About</string>
    <string name="notifications_settings">Notifications Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="socials">Socials</string>
    <string name="help_app_settings"><![CDATA[Help & App Settings]]></string>
    <string name="add_new_site">Add New Site</string>
    <string name="logout">Logout</string>
    <string name="about_uncovering_history">About Uncovering History</string>
    <string name="work_in_progress">Work In Progress</string>
    <string name="view_site">View Site</string>
    <string name="password">Password (6–12)</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="uncovering_history">Uncovering History</string>
    <string name="return_to_login">Return to Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_name">User Name</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="add_to_route">Add to Route</string>
    <string name="filter_by_favourites">Filter by Favourites</string>
</resources>