<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/uncovering_history"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/profile_about_button"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:text="@string/about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

        <Button
            android:id="@+id/profile_notifications_button"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:text="@string/notifications_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_about_button" />

        <Button
            android:id="@+id/profile_account_button"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:text="@string/account_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_notifications_button" />

        <Button
            android:id="@+id/profile_social_button"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:text="@string/socials"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_account_button" />

        <Button
            android:id="@+id/profile_help_button"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:text="@string/help_app_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_social_button" />

        <Button
            android:id="@+id/add_new_site"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:text="@string/add_new_site"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_help_button" />

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginBottom="32dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/color_primary_background"
        app:itemIconTint="@color/color_primary_text"
        app:itemTextColor="@color/color_primary_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu_navigation" />


</androidx.constraintlayout.widget.ConstraintLayout>