<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNewSite">
    <!-- Creating new Sites can be easily made using this page -->
    <EditText
        android:id="@+id/historical_site_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/historical_site_name"
        app:layout_constraintBottom_toTopOf="@+id/historical_site_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/historical_site_description"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/historical_site_description"
        app:layout_constraintBottom_toTopOf="@+id/historical_site_location" />

    <EditText
        android:id="@+id/historical_site_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/historical_site_location"
        app:layout_constraintBottom_toTopOf="@+id/historical_site_imgView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/historical_site_imgView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/site_image"
        app:layout_constraintBottom_toTopOf="@+id/submit_historical_site"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/historical_site_selectImg"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/select_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/historical_site_location" />

    <Spinner
        android:id="@+id/historical_site_type"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/select_historical_type"
        app:layout_constraintBottom_toTopOf="@+id/submit_historical_site"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/submit_historical_site"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/upload_site"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
